# ptrack

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
ptrack/: __init__.py
ptrack/cli/: __init__.py  __main__.py  color.py  symbols.py  watch.py
ptrack/modules/: __init__.py  asendia.py  dhl_de.py  globalpost.py  gls.py  helpers.py  models.py
